--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 	      		</button>
 	      		<div class="collapse navbar-collapse" id="ftco-nav">
 	        		<ul class="navbar-nav nav ml-auto">
-						<li class="nav-item"><a href="#home-section" class="nav-link"><span>Accueil</span></a></li>
-						<li class="nav-item"><a href="#about-section" class="nav-link"><span>&Agrave; propos</span></a></li>
-						<li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resum&eacute;</span></a></li>
-						<li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
-						<li class="nav-item"><a href="#skills-section" class="nav-link"><span>Comp&eacute;tences</span></a></li>
-						<li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
+						<li class="nav-item"><a href="#home-section" class="nav-link"><span><i class="fa fa-home"></i> Accueil</span></a></li>
+						<li class="nav-item"><a href="#about-section" class="nav-link"><span><i class="fa fa-info-circle"></i> &Agrave; propos</span></a></li>
+						<li class="nav-item"><a href="#resume-section" class="nav-link"><span><i class="fa fa-bars"></i> Resum&eacute;</span></a></li>
+						<li class="nav-item"><a href="#services-section" class="nav-link"><span><i class="fa fa-wrench"></i> Services</span></a></li>
+						<li class="nav-item"><a href="#skills-section" class="nav-link"><span><i class="fa fa-th-list"></i> Comp&eacute;tences</span></a></li>
+						<li class="nav-item"><a href="#contact-section" class="nav-link"><span><i class="fa fa-phone"></i> Contact</span></a></li>
 	        		</ul>
 	      		</div>
 			</div>
@@ -47,7 +47,7 @@
 								<span class="subheading">Hello world!</span>
 								<h1 class="mb-4 mt-3">Je suis <span>Safidy Herimampianina</span></h1>
 								<h2 class="mb-4">Un d&eacute;v&eacute;loppeur FullStack</h2>
-								<p><a href="#contact-section" class="btn btn-primary py-3 px-4">Embauchez-moi</a> <a href="#services-section" class="btn btn-white btn-outline-white py-3 px-4">Services</a></p>
+								<p><a href="#contact-section" class="btn btn-primary py-3 px-4">Contactez Moi</a> <a href="#services-section" class="btn btn-white btn-outline-white py-3 px-4">Services</a></p>
 							</div>
 		          		</div>
 	        		</div>
@@ -64,7 +64,7 @@
 							<div class="text">
 								<span class="subheading">Hello world!</span>
 								<h1 class="mb-4 mt-3">Je suis<span> Un d&eacute;v&eacute;loppeur en freelance</span> bas&eacute; a Madagascar</h1>
-								<p><a href="#contact-section" class="btn btn-primary py-3 px-4">Embauchez-moi</a> <a href="#services-section" class="btn btn-white btn-outline-white py-3 px-4">Services</a></p>
+								<p><a href="#contact-section" class="btn btn-primary py-3 px-4">Contactez Moi</a> <a href="#services-section" class="btn btn-white btn-outline-white py-3 px-4">Services</a></p>
 							</div>
 						</div>
 						</div>
@@ -98,10 +98,6 @@
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-              	<p class="mb-4">
-	                <span class="number" data-number="120">0</span>
-	                <span>Projets</span>
-                </p>
                 <p><a href="#" class="btn btn-primary py-3 px-3">T&eacute;l&eacute;charger mon CV</a></p>
 			</div>
 		</div>
@@ -119,42 +115,43 @@
         </div>
     		<div class="row">
     			<div class="col-md-6">
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Master Degree of Design</h2>
-    					<span class="position">Cambridge University</span>
+					<div class="resume-wrap ftco-animate">
+						<span class="date">2020 - 2025</span>
+						<h2>Developpeur FullStack Java/C#/php</h2>
+						<span class="position">BICI Madagascar</span>
+						<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+					</div>
+					<div class="resume-wrap ftco-animate">
+    					<span class="date">2021-2022</span>
+    					<h2>Developpeur freelance php/Wordpress</h2>
+    					<span class="position">Supermarche.mg</span>
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     				</div>
+    				
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Bachelor's Degree of C.A</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Diploma in Computer</h2>
-    					<span class="position">Cambridge University</span>
+    					<span class="date">2016-2019</span>
+    					<h2>Licence en Developpement d'application</h2>
+    					<span class="position">IT University</span>
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     				</div>
     			</div>
     			<div class="col-md-6">
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Art &amp; Creative Director</h2>
-    					<span class="position">Cambridge University</span>
+					<div class="resume-wrap ftco-animate">
+    					<span class="date">2022-2023</span>
+    					<h2>IT Consultant Dev'Ops</h2>
+    					<span class="position">SAFRAM(France)</span>
+    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    				</div>
+					<div class="resume-wrap ftco-animate">
+    					<span class="date">2019-2020</span>
+    					<h2>Stagiaire en Developpement web Php/Symfony</h2>
+    					<span class="position">INOTHER SARLU Madagascar</span>
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Wordpress Developer</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2017-2018</span>
-    					<h2>UI/UX Designer</h2>
-    					<span class="position">Cambridge University</span>
+						<span class="date">2015-2016</span>
+    					<h2>Baccalear&eacute;at Scientifique(S&eacute;rie D)</h2>
+    					<span class="position">La Fl&ecirc;che</span>
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     				</div>
     			</div>
@@ -420,13 +417,13 @@
 				</div>
 			</div>
 		</section>
-    <section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
+    <section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/image_3.jpg)">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
-						<h2>Je suis<span> Disponible</span> pour des missions en freelances</h2>
+						<h2>Je suis<span> Disponible</span> pour <span>des missions en freelances</span></h2>
 						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Embauchez-moi</a></p>
+						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Contactez Moi</a></p>
 					</div>
 				</div>
 			</div>
@@ -436,13 +433,13 @@
 		<div class="container">
 			<div class="row justify-content-center mb-5 pb-3">
 			<div class="col-md-7 heading-section text-center ftco-animate">
-				<h2 class="mb-4">Contactez-moi</h2>
+				<h2 class="mb-4">Contactez Moi</h2>
 				<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
 			</div>
 			</div>
 
 			<div class="row d-flex contact-info mb-5">
-			<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+			<div class="col-md-6 col-lg-4 d-flex ftco-animate">
 				<div class="align-self-stretch box p-4 text-center">
 					<div class="icon d-flex align-items-center justify-content-center">
 						<span class="icon-map-signs"></span>
@@ -451,7 +448,7 @@
 					<p>Lot IIB 104 Mahalavolona</p>
 				</div>
 			</div>
-			<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+			<div class="col-md-6 col-lg-4 d-flex ftco-animate">
 				<div class="align-self-stretch box p-4 text-center">
 					<div class="icon d-flex align-items-center justify-content-center">
 						<span class="icon-phone2"></span>
@@ -460,22 +457,13 @@
 					<p><a href="tel://1234567920">+261 34 47 973 32</a></p>
 				</div>
 			</div>
-			<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+			<div class="col-md-6 col-lg-4 d-flex ftco-animate">
 				<div class="align-self-stretch box p-4 text-center">
 					<div class="icon d-flex align-items-center justify-content-center">
 						<span class="icon-paper-plane"></span>
 					</div>
 					<h3 class="mb-4">Adresse email</h3>
 					<p><a href="mailto:info@yoursite.com">safidyherimampianina@gmail.com</a></p>
-				</div>
-			</div>
-			<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-				<div class="align-self-stretch box p-4 text-center">
-					<div class="icon d-flex align-items-center justify-content-center">
-						<span class="icon-globe"></span>
-					</div>
-					<h3 class="mb-4">Site web</h3>
-					<p><a href="#">safidyherimampianina.com</a></p>
 				</div>
 			</div>
 			</div>
