--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<title>Safidy - Porfolio</title>
 		<meta charset="utf-8">
@@ -14,15 +14,33 @@
 		<link rel="stylesheet" href="css/icomoon.css">
 		<link rel="stylesheet" href="css/style.css">
   	</head>
-	  <style>
-        #loader {
-            display: none;
-        }
+	<style>
+		#downloadBtn {
+			padding: 10px 20px;
+			font-size: 16px;
+			cursor: pointer;
+			border: 1px solid #3498db;
+			background-color: #3498db;
+			color: white;
+			border-radius: 5px;
+			display: inline-block;
+			text-align: center;
+		}
 
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
+		#loadercv {
+			display: none;
+		}
+
+		.loading-text {
+			display: none;
+		}
+
+		/* Si vous voulez centrer l'élément de chargement */
+		#loadercv {
+			width: 24px; /* Vous pouvez ajuster la taille selon vos besoins */
+			height: 24px;
+		}
+
     </style>
   	<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
     	<nav class="navbar navbar-expand-lg  ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
@@ -93,22 +111,29 @@
     				</div>
     			</div>
     			<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
-    				<div class="row justify-content-start pb-3">
-		          <div class="col-md-12 heading-section ftco-animate">
-		            <h2 class="mb-4">&Agrave; propos</h2>
-		            <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span>Nom:</span> <span>Safidy HERIMAMPIANINA</span></li>
-		            	<li class="d-flex"><span>Date de naissance:</span> <span>17 Juin 1999</span></li>
-		            	<li class="d-flex"><span>Addresse:</span> <span>Lot IIB 104 Mahalavolona, Antananarivo, Madagascar</span></li>
-		            	<li class="d-flex"><span>Code postale:</span> <span>102</span></li>
-		            	<li class="d-flex"><span>Adresse email:</span> <span>safidyherimampianina@gmail.com</span></li>
-		            	<li class="d-flex"><span>T&eacute;l&eacute;phone: </span> <span>+261 34 47 973 32</span></li>
-		            </ul>
-		          </div>
+				<div class="row justify-content-start pb-3">
+					<div class="col-md-12 heading-section ftco-animate">
+						<h2 class="mb-4">&Agrave; propos</h2>
+						<ul class="about-info mt-4 px-md-0 px-2">
+							<li class="d-flex"><span>Nom:</span> <span>Safidy HERIMAMPIANINA</span></li>
+							<li class="d-flex"><span>Date de naissance:</span> <span>17 Juin 1999</span></li>
+							<li class="d-flex"><span>Addresse:</span> <span>Lot IIB 104 Mahalavolona, Antananarivo, Madagascar</span></li>
+							<li class="d-flex"><span>Code postale:</span> <span>102</span></li>
+							<li class="d-flex"><span>Adresse email:</span> <span>safidyherimampianina@gmail.com</span></li>
+							<li class="d-flex"><span>T&eacute;l&eacute;phone: </span> <span>+261 34 47 973 32</span></li>
+						</ul>
+					</div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
-              <div class="text">
-                <p><a href="https://drive.google.com/uc?export=download&id=1jxhGHcuNZPgJ0YTbyiu2fnpsviz7PqkJ" id="downloadLink" class="btn btn-primary py-4 px-5" onlick="startDownload()"><i class="fa fa-arrow-down" aria-hidden="true"></i> <img id="loader" src="css/ajax-loader.gif"/> T&eacute;l&eacute;charger mon CV</a></p>
+			<div class="text">
+				<p>
+					<a href="javascript:void(0);" id="downloadLink" class="btn btn-primary py-4 px-5" onclick="startDownload()">
+						<i id="downloadIcon" class="fa fa-arrow-down" aria-hidden="true"></i>
+						<img id="loadercv" src="css/ajax-loader.gif" style="display:none; margin-right: 10px;"/>
+						Télécharger mon CV
+					</a>
+				</p>
+				
 			</div>
 		</div>
 	</div>
@@ -195,7 +220,13 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/uc?export=download&id=1jxhGHcuNZPgJ0YTbyiu2fnpsviz7PqkJ" id="downloadLink" class="btn btn-primary py-4 px-5" onlick="startDownload()"><i class="fa fa-arrow-down" aria-hidden="true"></i> <img id="loader" src="css/ajax-loader.gif"/> T&eacute;l&eacute;charger mon CV</a></p>
+					<p>
+						<a href="javascript:void(0);" id="downloadLink" class="btn btn-primary py-4 px-5" onclick="startDownload()">
+							<i id="downloadIcon" class="fa fa-arrow-down" aria-hidden="true"></i>
+							<img id="loadercv" src="css/ajax-loader.gif" style="display:none; margin-right: 10px;"/>
+							Télécharger mon CV
+						</a>
+					</p>					
     			</div>
     		</div>
 			
@@ -558,6 +589,57 @@
 			</div>
 		</div>
     </footer>
+	<script>
+		function startDownload() {
+			// Cacher l'icône de téléchargement et afficher le loader
+			var downloadIcon = document.getElementById('downloadIcon');
+			const loader = document.getElementById("loadercv");
+	
+			// Afficher le loader immédiatement et cacher l'icône de téléchargement
+			downloadIcon.style.display = 'none';
+			loader.style.display = 'inline-block';  // Afficher le loader
+	
+			// Utilisation de fetch pour récupérer le fichier
+			const fileUrl = "CV/CV de Safidy Herimampianina.pdf";
+			const fileName = "CV_de_Safidy_Herimampianina.pdf";
+	
+			// Commencer à télécharger après un petit délai (500 ms) pour afficher l'animation du loader
+			setTimeout(() => {
+				fetch(fileUrl)
+					.then(response => {
+						if (!response.ok) {
+							throw new Error("Erreur lors de la récupération du fichier.");
+						}
+						return response.blob();
+					})
+					.then(blob => {
+						// Créer un URL temporaire pour le Blob
+						const url = window.URL.createObjectURL(blob);
+						const anchor = document.createElement('a');
+						anchor.href = url;
+						anchor.download = fileName;
+						document.body.appendChild(anchor);
+						anchor.click();
+						// Nettoyer l'URL temporaire après le téléchargement
+						window.URL.revokeObjectURL(url);
+						document.body.removeChild(anchor);
+	
+						// Réinitialiser l'interface après le téléchargement
+						downloadIcon.style.display = 'inline-block';
+						loader.style.display = 'none';  // Cacher le loader une fois le téléchargement terminé
+					})
+					.catch(error => {
+						console.error("Erreur :", error);
+						alert("Échec du téléchargement du fichier.");
+						// Réinitialiser l'interface même en cas d'erreur
+						downloadIcon.style.display = 'inline-block';
+						loader.style.display = 'none';
+					});
+			}, 500); // Attente de 500 ms pour afficher le loader avant de commencer le téléchargement
+		}
+	</script>
+	
+	
 	<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<script>
@@ -583,20 +665,8 @@
 				document.getElementById('responseText').innerHTML = '<i class="fa fa-times-circle" style="color: red; margin-right: 8px;"></i>Erreur lors de l\'envoi de votre message.';
 				});
 		});
-		function startDownload() {
-            // Afficher le loader
-            document.getElementById('loader').style.display = 'block';
-
-            // Attendre un peu avant de commencer le téléchargement pour simuler le chargement
-            setTimeout(function() {
-                // Effectuer le téléchargement
-                window.location.href = document.getElementById('downloadLink').href;
-                
-                // Cacher le loader après le début du téléchargement
-                document.getElementById('loader').style.display = 'none';
-            }, 1000);  // Temps d'attente de 1 seconde avant de démarrer le téléchargement
-        }
 	</script>
+	
 	<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery-migrate-3.0.1.min.js"></script>
