debug responsive - and performance optimization

--- a/index.html
+++ b/index.html
@@ -6,69 +6,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="css/animate.css">
+		<link rel="stylesheet" href="css/animate.min.css">
 		<link rel="stylesheet" href="css/owl.carousel.min.css">
 		<link rel="stylesheet" href="css/magnific-popup.css">
 		<link rel="stylesheet" href="css/aos.css">
 		<link rel="stylesheet" href="css/flaticon.css">
 		<link rel="stylesheet" href="css/icomoon.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/style.min.css">
   	</head>
-	<style>
-		#downloadBtn {
-			padding: 10px 20px;
-			font-size: 16px;
-			cursor: pointer;
-			border: 1px solid #3498db;
-			background-color: #3498db;
-			color: white;
-			border-radius: 5px;
-			display: inline-block;
-			text-align: center;
-		}
-
-		#loadercv {
-			display: none;
-		}
-
-		.loading-text {
-			display: none;
-		}
-
-		/* Si vous voulez centrer l'élément de chargement */
-		#loadercv {
-			width: 24px; /* Vous pouvez ajuster la taille selon vos besoins */
-			height: 24px;
-		}
-		#downloadBtn1 {
-			padding: 10px 20px;
-			font-size: 16px;
-			cursor: pointer;
-			border: 1px solid #3498db;
-			background-color: #3498db;
-			color: white;
-			border-radius: 5px;
-			display: inline-block;
-			text-align: center;
-		}
-
-		#loadercv1 {
-			display: none;
-		}
-
-		/* Si vous voulez centrer l'élément de chargement */
-		#loadercv1 {
-			width: 24px; /* Vous pouvez ajuster la taille selon vos besoins */
-			height: 24px;
-		}
-
-    </style>
   	<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
     	<nav class="navbar navbar-expand-lg  ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    	<div class="container">
 	      		<a class="navbar-brand" href="index.html">Safidy.H</a>
 	      		<button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        		<span class="oi oi-menu"></span> Menu
+					 <img id="menu-toogle" src="images/menu.png" alt="Menu"/>
 	      		</button>
 	      		<div class="collapse navbar-collapse" id="ftco-nav">
 	        		<ul class="navbar-nav nav ml-auto">
@@ -88,7 +39,7 @@
 	      			<div class="overlay"></div>
 				<div class="container">
 	          		<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          			<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_1.png);">
+	          			<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_1.webp);">
 	          				<div class="overlay"></div>
 	          			</div>
 		          		<div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -96,7 +47,7 @@
 								<span class="subheading">Hello world!</span>
 								<h1 class="mb-4 mt-3">Je suis <span>Safidy Herimampianina</span></h1>
 								<h2 class="mb-4">Un d&eacute;v&eacute;loppeur FullStack</h2>
-								<p><a href="#contact-section" class="btn btn-primary py-3 px-4">Contactez-moi</a> <a href="#services-section" class="btn btn-white btn-outline-white py-3 px-4">Services</a></p>
+								<p><a href="#contact-section" class="btn btn-primary py-3 px-4"><i class="fa fa-phone"></i> Contactez-moi</a> <a href="#services-section" class="btn btn-white btn-outline-white py-3 px-4"><i class="fa fa-wrench"></i> Services</a></p>
 							</div>
 		          		</div>
 	        		</div>
@@ -106,14 +57,14 @@
 	      		<div class="overlay"></div>
 				<div class="container">
 					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-						<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_2.png);">
+						<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_2.webp);">
 							<div class="overlay"></div>
 						</div>
 						<div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
 								<span class="subheading">Hello world!</span>
 								<h1 class="mb-4 mt-3">Je suis<span> un d&eacute;v&eacute;loppeur freelance</span> bas&eacute; &agrave; Madagascar</h1>
-								<p><a href="#contact-section" class="btn btn-primary py-3 px-4">Contactez-moi</a> <a href="#services-section" class="btn btn-white btn-outline-white py-3 px-4">Services</a></p>
+								<p><a href="#contact-section" class="btn btn-primary py-3 px-4"><i class="fa fa-phone"></i> Contactez-moi</a> <a href="#services-section" class="btn btn-white btn-outline-white py-3 px-4"><i class="fa fa-wrench"></i> Services</a></p>
 							</div>
 						</div>
 						</div>
@@ -127,7 +78,7 @@
     			<div class="col-md-6 col-lg-5 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/bg_1.png);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/bg_1.webp);">
 	    				</div>
     				</div>
     			</div>
@@ -263,9 +214,9 @@
         </div>
     		<div class="row">
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
+						<a href="#skills-section" class="services-1">
 							<span class="icon">
-								<i class="flaticon-analysis"></i>
+								<i class="flaticon-innovation"></i>
 							</span>
 							<div class="desc">
 								<h3 class="mb-5">Developpement d'application</h3>
@@ -273,9 +224,9 @@
 						</a>
 					</div>
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
+						<a href="#skills-section" class="services-1">
 							<span class="icon">
-								<i class="flaticon-ideas"></i>
+								<i class="flaticon-web-design"></i>
 							</span>
 							<div class="desc">
 								<h3 class="mb-5">Developpement web fron-end & back-end</h3>
@@ -283,9 +234,9 @@
 						</a>
 					</div>
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
+						<a href="#skills-section" class="services-1">
 							<span class="icon">
-								<i class="flaticon-flasks"></i>
+								<i class="flaticon-ux-design"></i>
 							</span>
 							<div class="desc">
 								<h3 class="mb-5">Administration des bases de donn&eacute;es</h3>
@@ -445,7 +396,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row" id="database-section">
 					<div class="col-md-12">
 						<h3>Base de donn&eacute;es</h3>
 					</div>
@@ -507,19 +458,18 @@
 				</div>
 			</div>
 		</section>
-    <section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/image_3.jpg)">
+    <section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/image_3.webp)">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>Je suis<span> Disponible</span> pour <span>des missions en freelances</span></h2>
 						<p>Que ce soit pour des projets de développement web, mobile, ou des solutions sur mesure, je m'engage à fournir des résultats de qualité.</p>
 						<p>N'hésitez pas à me contacter pour discuter de vos projets !</p>
-						<a href="#contact-section" class="btn btn-primary py-3 px-5">Contactez-moi</a>
+						<a href="#contact-section" class="btn btn-primary py-3 px-5"><i class="fa fa-phone"></i> Contactez-moi</a>
 					</div>
 				</div>
 			</div>
 		</section>
-
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
 		<div class="container">
 			<div class="row justify-content-center mb-5 pb-3">
@@ -562,32 +512,30 @@
 			<div class="row no-gutters block-9">
 			<div class="col-md-8 order-md-last d-flex">
 				<form action="#" class="bg-light p-4 p-md-5 contact-form" id="emailForm">
-				<div class="form-group">
-					<input type="text" class="form-control" placeholder="Votre Nom" id="user_name" name="user_name" required>
-				</div>
-				<div class="form-group">
-					<input type="email" class="form-control" placeholder="Votre adresse email" id="user_email" name="user_email" required>
-				</div>
-				<div class="form-group">
-					<textarea id="message" name="message" cols="30" rows="7" class="form-control" placeholder="Message" required></textarea>
-				</div>
-				<div id="loader" style="display: none; text-align: center;">
-					<img src="css/ajax-loader.gif" alt="loading" style="width: 50px;"/>
-					<p style="color:white">Envoi en cours...</p>
+					<div class="form-group">
+						<input type="text" class="form-control" placeholder="Nom" id="user_name" name="user_name" required>
 					</div>
-					<div id="responseMessage" style="display: none; text-align: center; margin-top: 20px;">
-						<p style="color:white" id="responseText"></p>
-						<i id="responseIcon" class="fa fa-check-circle"></i>
+					<div class="form-group">
+						<input type="email" class="form-control" placeholder="Adresse email" id="user_email" name="user_email" required>
 					</div>
-				<div class="form-group">
-					<input type="submit" value="Envoyer" class="btn btn-primary py-3 px-5">
-				</div>
-				
+					<div class="form-group">
+						<textarea id="message" name="message" cols="30" rows="7" class="form-control" placeholder="Message" required></textarea>
+					</div>
+					<div id="loader" style="display: none; text-align: center;">
+						<img src="css/ajax-loader.gif" alt="loading" style="width: 50px;"/>
+						<p style="color:white">Envoi en cours...</p>
+						</div>
+						<div id="responseMessage" style="display: none; text-align: center; margin-top: 20px;">
+							<p style="color:white" id="responseText"></p>
+							<i id="responseIcon" class="fa fa-check-circle"></i>
+						</div>
+					<div class="form-group">
+						<button type="submit" class="btn btn-primary py-3 px-5"><i class="fa fa-send"></i> Envoyer</button>
+					</div>
 				</form>
-				
 			</div>
 			<div class="col-md-4 d-flex">
-				<div class="img" style="background-image: url(images/about.jpg);"></div>
+				<div class="img" style="background-image: url(images/about.webp);"></div>
 			</div>
 			</div>
 		</div>
@@ -610,131 +558,8 @@
 			</div>
 		</div>
     </footer>
-	<script>
-		function startDownload() {
-			// Cacher l'icône de téléchargement et afficher le loader
-			var downloadIcon = document.getElementById('downloadIcon');
-			const loader = document.getElementById("loadercv");
-	
-			// Afficher le loader immédiatement et cacher l'icône de téléchargement
-			downloadIcon.style.display = 'none';
-			loader.style.display = 'inline-block';  // Afficher le loader
-	
-			// Utilisation de fetch pour récupérer le fichier
-			const fileUrl = "CV/CV de Safidy Herimampianina.pdf";
-			const fileName = "CV_de_Safidy_Herimampianina.pdf";
-	
-			// Commencer à télécharger après un petit délai (500 ms) pour afficher l'animation du loader
-			setTimeout(() => {
-				fetch(fileUrl)
-					.then(response => {
-						if (!response.ok) {
-							throw new Error("Erreur lors de la récupération du fichier.");
-						}
-						return response.blob();
-					})
-					.then(blob => {
-						// Créer un URL temporaire pour le Blob
-						const url = window.URL.createObjectURL(blob);
-						const anchor = document.createElement('a');
-						anchor.href = url;
-						anchor.download = fileName;
-						document.body.appendChild(anchor);
-						anchor.click();
-						// Nettoyer l'URL temporaire après le téléchargement
-						window.URL.revokeObjectURL(url);
-						document.body.removeChild(anchor);
-	
-						// Réinitialiser l'interface après le téléchargement
-						downloadIcon.style.display = 'inline-block';
-						loader.style.display = 'none';  // Cacher le loader une fois le téléchargement terminé
-					})
-					.catch(error => {
-						console.error("Erreur :", error);
-						alert("Échec du téléchargement du fichier.");
-						// Réinitialiser l'interface même en cas d'erreur
-						downloadIcon.style.display = 'inline-block';
-						loader.style.display = 'none';
-					});
-			}, 1000); // Attente de 500 ms pour afficher le loader avant de commencer le téléchargement
-		}
-		function startDownload1() {
-			// Cacher l'icône de téléchargement et afficher le loader
-			var downloadIcon1 = document.getElementById('downloadIcon1');
-			const loader1 = document.getElementById("loadercv1");
-	
-			// Afficher le loader immédiatement et cacher l'icône de téléchargement
-			downloadIcon1.style.display = 'none';
-			loader1.style.display = 'inline-block';  // Afficher le loader
-	
-			// Utilisation de fetch pour récupérer le fichier
-			const fileUrl = "CV/CV de Safidy Herimampianina.pdf";
-			const fileName = "CV_de_Safidy_Herimampianina.pdf";
-	
-			// Commencer à télécharger après un petit délai (500 ms) pour afficher l'animation du loader
-			setTimeout(() => {
-				fetch(fileUrl)
-					.then(response => {
-						if (!response.ok) {
-							throw new Error("Erreur lors de la récupération du fichier.");
-						}
-						return response.blob();
-					})
-					.then(blob => {
-						// Créer un URL temporaire pour le Blob
-						const url = window.URL.createObjectURL(blob);
-						const anchor = document.createElement('a');
-						anchor.href = url;
-						anchor.download = fileName;
-						document.body.appendChild(anchor);
-						anchor.click();
-						// Nettoyer l'URL temporaire après le téléchargement
-						window.URL.revokeObjectURL(url);
-						document.body.removeChild(anchor);
-	
-						// Réinitialiser l'interface après le téléchargement
-						downloadIcon1.style.display = 'inline-block';
-						loader1.style.display = 'none';  // Cacher le loader une fois le téléchargement terminé
-					})
-					.catch(error => {
-						console.error("Erreur :", error);
-						alert("Échec du téléchargement du fichier.");
-						// Réinitialiser l'interface même en cas d'erreur
-						downloadIcon1.style.display = 'inline-block';
-						loader1.style.display = 'none';
-					});
-			}, 1000); // Attente de 500 ms pour afficher le loader avant de commencer le téléchargement
-		}
-	</script>
-	
-	
 	<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-	<script>
-		(function() {
-			emailjs.init("DQWijvtXNDSlhjGvd");
-		})();
-		document.getElementById('emailForm').addEventListener('submit', function(event) {
-			event.preventDefault();
-			document.getElementById('loader').style.display = 'block';
-			const serviceID = 'service_mwbsbia';
-			const templateID = 'template_f00klsk';
-			emailjs.sendForm(serviceID, templateID, this)
-				.then(function(response) {
-				document.getElementById('loader').style.display = 'none';
-				document.getElementById('responseMessage').style.display = 'block';
-				document.getElementById('responseText').innerHTML = '<i class="fa fa-check-circle" style="color: green; margin-right: 8px;"></i>Message envoyé à Safidy HERIMAMPIANINA !';
-				document.getElementById('user_name').value = '';
-				document.getElementById('user_email').value = '';
-				document.getElementById('message').value= '';
-				}, function(error) {
-				document.getElementById('loader').style.display = 'none';
-				document.getElementById('responseMessage').style.display = 'block';
-				document.getElementById('responseText').innerHTML = '<i class="fa fa-times-circle" style="color: red; margin-right: 8px;"></i>Erreur lors de l\'envoi de votre message.';
-				});
-		});
-	</script>
-	
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery-migrate-3.0.1.min.js"></script>
 	<script src="js/popper.min.js"></script>
@@ -747,6 +572,7 @@
 	<script src="js/aos.js"></script>
 	<script src="js/jquery.animateNumber.min.js"></script>
 	<script src="js/scrollax.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/main.min.js"></script>
+	<script src="js/services.min.js"></script>
   	</body>
 </html>
