--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
 							<h3>C#</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:65%">
-							    <span>65%</span>
+							  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
+							    <span>50%</span>
 							  	</div>
 							</div>
 						</div>
@@ -364,11 +364,11 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>Dot Net</h3>
+							<h3>.Net</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:65%">
-							    <span>65%</span>
+							  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
+							    <span>50%</span>
 							  	</div>
 							</div>
 						</div>
