update- social network

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						<h2>Developpeur FullStack Java/C#/php</h2>
 						<span class="position">BICI Madagascar</span>
 						<p class="mt-4">
-							J'ai conçu et développé des applications internes pour l'entreprise ainsi que des solutions pour des clients internationaux, principalement basés hors de Madagascar.
+							J'ai conçu et développé des applications internes pour l'entreprise ainsi que des solutions pour des clients internationaux.
 							 J'ai également assuré des missions de consultation informatique, en collaborant avec des entreprises à l'étranger pour les accompagner dans la mise en place 
 							 de solutions techniques adaptées à leurs besoins.
 						</p>
@@ -545,9 +545,9 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<ul class="ftco-footer-social list-unstyled">
-						<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-						<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-						<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+						<li class="ftco-animate"><a href="https://www.linkedin.com/in/safidy-herimampianina-0170321a4/"><span class="icon-linkedin"></span></a></li>
+						<li class="ftco-animate"><a href="https://www.facebook.com/safidy.herimampianina"><span class="icon-facebook"></span></a></li>
+						<li class="ftco-animate"><a href="https://wa.me/261344797332"><span class="icon-whatsapp"></span></a></li>
 					</ul>
 				</div>
 			</div>
